tests/compiler_errors/name_redefinitions/type_redef_mem.tlp
reserve foo 1 end
struct foo int end
